avoid contrast error

--- a/lesson14/css/small.css
+++ b/lesson14/css/small.css
@@ -694,7 +694,7 @@ input {
 }
 
 .option-card:nth-child(4) {
-    background-color: var(--steel-blue);
+    background-color: #4D7EA8;
 }
 
 .option-card:nth-child(5) {
